<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/top_bar_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/icon_image_view_edit"
                android:layout_margin="8dp"
                android:layout_width="42dp"
                android:layout_height="42dp" />
            <Button
                android:text="@string/save"
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:text="@string/delete"
                android:id="@+id/delete_button"
                android:backgroundTint="@android:color/holo_red_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/title"
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/credential_title"
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/url"
                android:id="@+id/url_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:hint="@string/credential_url"
                android:id="@+id/url_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/top_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/editable_fields_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/add_cred_field_fab"
        android:layout_gravity="end"
        android:layout_margin="24dp"
        android:src="@drawable/ic_baseline_add_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>